<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C1_验机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="scale_settings">验机测试与设置</string>
    <string name="clear">清除 </string>
    <string name="close">退出</string>
    <string name="prefix"> 前缀</string>
    <string name="suffix"> 后缀 </string>
    <string name="enter"> 回车 </string>
    <string name="read"> 请读卡 </string>
    <string name="test_demo"> 测试演示</string>
    <string name="title">称重模块演示程序</string>
    <string name="text_1">重量(kg)</string>
    <string name="zero">0.000</string>
    <string name="qu_pi">标零</string>
    <string name="biao_ding">1Kg</string>
    <string name="debug">调试</string>    
    <string name="single_test">单项测试 </string>    
    <string name="all_test">整机测试</string>    
    <string name="old_test">老化测试</string>    
    <string name="board_test">主板测试</string>    
    <string name="scale_mode">称重模块</string>    
    <string name="lcd_test">测试显示</string>    
    <string name="prt">打印机</string>    
    <string name="sn_code">SN码</string>    
    <string name="touchscreem">触摸屏画线</string>    
    <string name="cash_box">开钱箱</string>    
    <string name="net_work">以太网</string>    
    <string name="go_ping">ping目标IP</string>    
    <string name="edit_ip">编辑目标IP</string>    
    <string name="list">列表</string>    
    <string name="net_test">选择IP后.点测试开始ping</string>    
    <string name="test">测试</string>    
    <string name="back">返回</string>    
    <string name="about_info">测试信息</string>    
    <string name="daojishi">10秒后无操作进入液晶测试</string>    
    <string name="li_next">离下次打印时间还有:</string>    
    <string name="minutes">30 分钟</string>    
    <string name="customer_test">客显测试</string>    
    <string name="action_customer">激活客显</string>     
    <string name="myPrt_test">自带打印机测试</string>
    <string name="prt_ready">打印机就绪</string>
    <string name="feed">走纸</string>
    <string name="check_self">自检</string>
    <string name="bmp_prt">图形打印</string>
    <string name="edit_prt">输入要打印的内容</string>
    <string name="sent">发送</string>
    <string name="prt_cut">切纸</string>
    <string name="check_sn">SN号检查</string>
    <string name="bootanimation">开机动画</string>
    <string name="xulie">序列号：</string>
    <string name="input_sn">写入SN号</string>
    <string name="edit_sn">编辑SN号</string>
    <string name="write">写入</string>
    <string name="input_xulie">写入序列号</string>
    <string name="edit_xulie">编辑序列号</string>    
    <string name="password">密码</string>
    <string name="ok">确定</string>
    <string name="red">红色</string>
    <string name="blue">蓝色</string>
    <string name="green">绿色</string>
    <string name="white">白色</string>
    <string name="next">下一步</string>
    <string name="pass">通过</string>
    <string name="rf_card">射频卡</string>
    <string name="finish">完成</string>
    <string name="com">串口</string>
    <string name="ic_card">磁卡:</string>  
    <string name="scale_test">  电子秤简单测试程序</string>  
    <string name="lingdian_biaoding">零点标定</string>  
    <string name="kg_1_make">以1kg为例标定:</string>  
    <string name="kg_5_make">以5kg为例标定</string>  
    <string name="kg_15_make">以15kg为例标定</string>  
    
  
</resources>
