<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/whitesmoke"
    tools:context=".MainActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="10pt"
        android:text="@string/title" />
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"        
        ></LinearLayout>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="3"   
	    android:orientation="vertical"     
        >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/black"
	        android:textSize="10pt"
	        android:text="@string/text_1" />
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="100dp"
	        android:id="@+id/date"
	        android:textColor="@color/red"
	        android:textSize="30pt"
	        android:text="@string/zero" />      
	        <LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:orientation="horizontal"
	            >
	            <Button 
				    android:layout_width="200dp"
				    android:layout_height="100dp"   
				    android:layout_marginLeft="500dp"
			        android:id="@+id/qupi"
					android:background="@drawable/ad_btn_blue"
			        android:textSize="8pt"
			        android:text="@string/qu_pi" />        
		        <Button 
				    android:layout_width="200dp"
				    android:layout_height="100dp"   
				    android:layout_marginLeft="5dp"
			        android:id="@+id/biaoding"
					android:background="@drawable/ad_btn_blue"
			        android:textSize="8pt"
			        android:text="@string/biao_ding" /> 
				<Button 
				    android:layout_width="200dp"
				    android:layout_height="100dp"   
				    android:layout_marginLeft="5dp"
			        android:id="@+id/debug"
					android:background="@drawable/ad_btn_blue"
			        android:textSize="8pt"
			        android:text="@string/debug" /> 
	            
	        </LinearLayout>  
    </LinearLayout>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"  
	    android:orientation="horizontal"      
        >
       
    </LinearLayout>
    
</LinearLayout>
