<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glay"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tx_title"
        android:text="@string/scale_test"
        android:textColor="@color/e_blue"
        android:textSize="12pt"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tx_version"
        android:text="v 1.0.0"
        android:textColor="@color/e_blue"
        android:textSize="12pt"
        android:layout_toRightOf="@+id/tx_title"
        android:layout_marginLeft="2pt"
        />   
         	
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:textSize="10pt"
        android:layout_marginLeft="180pt"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_stx"
        android:text="010.00"
        android:textSize="10pt"
        android:layout_below="@+id/tx_title"
        />
<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_cmd"
        android:text="00.00"
        android:textSize="10pt"
        android:layout_below="@+id/get_weight_stx"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_data_1"
        android:text="00.00"
        android:textSize="10pt"
        android:layout_below="@+id/get_weight_cmd"
        />    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_data_2"
        android:text="00.00"
        android:textSize="10pt"
        android:layout_below="@+id/get_weight_data_1"
        />   
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_data_3"
        android:text="00.00"
        android:textSize="10pt"
        android:layout_below="@+id/get_weight_data_2"
        />   
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_data_4"
        android:text="00.00"
        android:textSize="10pt"
        android:layout_below="@+id/get_weight_data_3"
        />      
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_data_5"
        android:text="00.00"
        android:textSize="10pt"
        android:layout_below="@+id/get_weight_data_4"
        />       
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_data_crc"
        android:text="00.00"
        android:textSize="10pt"
        android:layout_below="@+id/get_weight_data_5"
        />          
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_weight_data"
        android:text="00.00"
        android:textSize="15pt"
        android:layout_below="@+id/get_weight_data_crc"
        />      
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="110pt"
        android:layout_marginLeft="180pt"
        >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
	        <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/lingdian_biaoding"
	            android:id="@+id/btn_biaoling"
	            />
	        <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginRight="5dp"
	            android:text="@string/kg_1_make"
	            android:id="@+id/btn_renyi"
	            />	  
			<Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginRight="5dp"
	            android:text="@string/kg_5_make"
	            android:id="@+id/btn_renyi_5"
	            />	                  
	    </LinearLayout>        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/get_ad"
	        android:text="00.00"
	        android:textSize="12pt"
	        android:textColor="@color/red"
        />
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/get_base"
	        android:text="00.00"
	        android:textSize="12pt"
	        android:textColor="@color/red"
        />        
    </LinearLayout>
</RelativeLayout>
